a little more progress on spacing, potential issue on mobile/thin screens with flex column?

--- a/style.css
+++ b/style.css
@@ -14,6 +14,20 @@ p {
     padding: 0px;
 }
 
+button {
+    padding: 4px 20px 4px 20px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    border: 1px solid transparent;
+    height: 40px;
+    min-width: 140px;
+    font-weight: 800;
+}
+
+input, button, select, option, textarea {
+    font-size: 100%;
+}
+
 /*
     ====================
     Themes 
@@ -60,7 +74,7 @@ p {
     color: white;
 }
 
-.blue-border { border: 2px solid #3882F6; }
+.blue-border { border: 3px solid #3882F6; }
 .white-border { border: 2px solid white; }
 
 /* Rounded Edges */
@@ -95,19 +109,65 @@ p {
 }
 
 .section {
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.section-thin {
+    padding-left: 25%;
+    padding-right: 25%;
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
-    padding: 18px;
+    min-height: 90px;
 }
 
+.flex-space-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-space-around {
+    display: flex;
+    justify-content: space-around;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
+
+.flex-center-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-unit-one {
+    flex: 1;
+}
+
+.flex-gap-one {
+    gap: 35px;
+}
+
+.flex-gap-two {
+    gap: 30px;
+}
+
+.square {
+    /*height: 200px;
+    width: 200px;*/
+}
+
+/*
+    ====================
+    Section specific spacing
+*/
+
 #start {
-    padding-top: 100px;
-    padding-bottom: 90px;
+    padding-top: 140px;
+    padding-bottom: 120px;
 }
 
 #gallery {
